--- a/JaVisteAMinhaMedia/app/src/main/res/layout/activity_grades.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/activity_grades.xml
@@ -16,14 +16,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/primeiroAno"
+            android:text="@string/firstYear"
             android:background="@null"
             android:textColor="@color/colorWhite"
             />
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/segundoAno"
+            android:text="@string/secondYear"
             android:layout_weight="1"
             android:background="@null"
             android:textColor="@color/colorWhite"
@@ -32,43 +32,40 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/terceiroAno"
+            android:text="@string/thirdYear"
             android:background="@null"
             android:textColor="@color/colorWhite"
             />
-
     </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="@string/primeiroSemestre"
+        android:text="@string/firstSemester"
         android:textSize="16sp"/>
 
     <ListView
         android:id="@+id/listView1SEM"
-        android:layout_width="wrap_content"
+        android:padding="2dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-
     </ListView>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/segundoSemestre"
+        android:text="@string/secondSemester"
         android:gravity="center"
         android:textSize="16sp"
         />
 
     <ListView
         android:id="@+id/listView2SEM"
-        android:layout_width="wrap_content"
+        android:padding="2dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
-
     </ListView>
-
 
 </LinearLayout>
