--- a/JaVisteAMinhaMedia/app/src/main/res/layout/activity_prediction_screen.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/activity_prediction_screen.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.InitialScreenActivity"
-    >
+    tools:context=".Activities.PredictionScreenActivity"
+   >
 
 
     <LinearLayout
@@ -19,7 +20,7 @@
             android:layout_width="261dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/TextMediaAtual"
+            android:text="@string/TextCurrentAverage"
             android:textColor="@color/colorWhite"
             android:textSize="22sp" />
 
@@ -45,7 +46,7 @@
             android:layout_width="229dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/TextMediaBolonha"
+            android:text="@string/TextBolognaAverage"
             android:textColor="@color/colorWhite"
             android:textSize="22sp" />
 
@@ -70,7 +71,7 @@
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/TextMediaPretendida"
+            android:text="@string/TextPretendedAverage"
             android:textSize="22sp" />
 
         <TextView
@@ -93,7 +94,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/InfoMediaBolonha"
+            android:text="@string/InfoBolognaAverage"
             android:textSize="14sp" />
 
     </LinearLayout>
