Added: BranchSelectionDialog + AverageGradeDialog Updated: UpdateGradesDialog
Added all the dialogs that were missing.
Also changed the layout to match our use cases.

--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_second_year.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_second_year.xml
@@ -6,6 +6,7 @@
     tools:context=".Activities.Fragments.SecondYearFragment">
 
     <TextView
+        android:layout_marginTop="56dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
