--- a/JaVisteAMinhaMedia/app/src/main/res/layout/activity_main.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:elevation="4dp"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
 
+    <FrameLayout
+        android:id="@+id/main_frame"
+        android:orientation="vertical"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_above="@id/main_navbar"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
+    </FrameLayout>
 
 
     <android.support.design.widget.BottomNavigationView
@@ -21,16 +38,6 @@
 
     </android.support.design.widget.BottomNavigationView>
 
-    <FrameLayout
-        android:id="@+id/main_frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/main_navbar"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
 
-
-
-    </FrameLayout>
 
 </RelativeLayout>
