--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_first_year.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_first_year.xml
@@ -7,6 +7,7 @@
     tools:context=".Activities.Fragments.FirstYearFragment">
 
     <TextView
+        android:layout_marginTop="56dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -17,8 +18,7 @@
         android:id="@+id/listView1SEM"
         android:padding="2dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
     </ListView>
 
     <TextView
