--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_grades.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_grades.xml
@@ -6,18 +6,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Activities.Fragments.GradesFragment">
 
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/main_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:elevation="0dp"
-        android:id="@+id/main_tab_bar">
+        android:id="@+id/main_tab_bar"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabGravity="fill"
         app:tabMode="fixed"
         android:id="@+id/year_tabs"
         app:tabTextColor="@color/colorAccent"
@@ -31,6 +34,7 @@
         android:layout_height="match_parent"
         android:id="@+id/view_pager"/>
 
+    </android.support.design.widget.CoordinatorLayout>
 
     <!-- TODO: Update blank fragment layout -->
 </RelativeLayout>
