--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
@@ -5,11 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.PredictionScreenActivity"
-    >
+    tools:context=".Activities.Fragments.PredictionFragment">
 
 
     <LinearLayout
+        android:layout_marginTop="56dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorDarkGrey"
