--- a/JaVisteAMinhaMedia/app/src/main/res/layout/listview_row_item.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/listview_row_item.xml
@@ -11,7 +11,7 @@
         android:layout_width="39dp"
         android:layout_height="39dp"
         android:layout_gravity="center"
-        android:background="drawable/oval">
+        android:background="@drawable/oval">
 
         <TextView
             android:id="@+id/text"
