Hotfix: Fragment + Student Manager + Branch

--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_year.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_year.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activities.Fragments.ThirdYearFragment">
+    android:orientation="vertical"
+    tools:context=".Activities.Fragments.YearFragment">
 
     <TextView
         android:layout_marginTop="56dp"
@@ -17,8 +18,7 @@
         android:id="@+id/listView1SEM"
         android:padding="2dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
     </ListView>
 
     <TextView
@@ -36,4 +36,4 @@
         android:layout_height="wrap_content">
     </ListView>
 
-</RelativeLayout>
+</LinearLayout>
