--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_year.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_year.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activities.Fragments.YearFragment">
+    tools:context=".Activities.Fragments.FirstYearFragment">
 
     <TextView
         android:layout_marginTop="56dp"
