--- a/JaVisteAMinhaMedia/app/src/main/res/layout/listview_row_item.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/listview_row_item.xml
@@ -11,13 +11,14 @@
         android:layout_width="39dp"
         android:layout_height="39dp"
         android:layout_gravity="center"
-        android:background="drawable/oval">
+        android:background="@drawable/oval">
 
         <TextView
-            android:id="@+id/text"
+            android:id="@+id/textCircle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:textSize="12sp"
             android:text="HelloWorld" />
     </RelativeLayout>
 
