--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
@@ -105,6 +105,7 @@
         android:orientation="vertical">
 
         <ListView
+            android:id="@+id/grades_prediction"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
