--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
@@ -45,7 +45,7 @@
         <TextView
             android:layout_width="229dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:text="@string/TextBolognaAverage"
             android:textColor="@color/colorWhite"
             android:textSize="22sp" />
@@ -55,9 +55,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="A"
             android:textColor="@color/colorWhite"
             android:textSize="21sp" />
+
+        <ImageView
+            android:id="@+id/btnUpdate_bologna_average"
+            android:layout_width="30dp"
+            android:layout_height="match_parent"
+            android:layout_weight="0.5"
+            android:src="@drawable/sync" />
+
 
     </LinearLayout>
 
