Added: Splash Screen

--- a/JaVisteAMinhaMedia/app/src/main/res/values/styles.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/values/styles.xml
@@ -5,4 +5,9 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="AppTheme.Launcher" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/landing_page</item>
+        <!-- Customize your theme here. -->
+    </style>
+
 </resources>
