--- a/JaVisteAMinhaMedia/app/src/main/res/layout/update_grade_dialog.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/update_grade_dialog.xml
@@ -36,7 +36,7 @@
             android:paddingBottom="5dp"
             android:textSize="15dp"
             android:hint="Introduza a sua nota"
-            android:inputType="number"
+            android:inputType="numberDecimal"
             />
     </LinearLayout>
 
