Added: Grades Prediction Warning

--- a/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/fragment_prediction_screen.xml
@@ -100,10 +100,11 @@
         android:padding="5dp">
 
         <TextView
+            android:id="@+id/prediction_grades_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/InfoBolognaAverage"
+            android:text="@string/prediciton_grades_info"
             android:textSize="14sp" />
 
     </LinearLayout>
