--- a/JaVisteAMinhaMedia/app/src/main/res/layout/listview_grades_row_item.xml
+++ b/JaVisteAMinhaMedia/app/src/main/res/layout/listview_grades_row_item.xml
@@ -15,10 +15,10 @@
 
         <TextView
             android:id="@+id/textCircle"
-            android:layout_marginLeft="12dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
+            android:gravity="center"
             android:textSize="12sp"
             android:text="HelloWorld" />
     </RelativeLayout>
